specs/001-typescript-to-zig-native/examples/invalid/import-duplicate.ts
import add from "../valid/import-math.ts";
import addAgain from "../valid/import-math.ts";

console.log(1);
